# tiny-ray-tracer

./: .editorconfig  .gitignore  CMakeLists.txt  compare.sh  implemented.txt  main.cpp  program  readme.md  run_implemented.sh  vec.cpp
include/: light.h  object.h  utils.h  vec.h
lib/: light.cpp  object.cpp  utils.cpp  vec.cpp
src/: main.cpp
test/: redchair.txt
